syntax = "proto3";

package crowdnotifier_v2;

message QRCodeTrace {
  uint32 version = 1;
  MasterTrace mtr = 2;
}

message QRCodeEntry {
  uint32 version = 1;
  LocationData data = 2;
}

message MasterTrace {
  bytes mpk = 1;
  bytes mskl = 2;
  bytes info = 3;
  bytes nonce1 = 4;
  bytes nonce2 = 5;
  bytes ctxtha = 6;
}

message EntProof {
  bytes nonce1 = 1;
  bytes nonce2 = 2;
}

message LocationData {
  bytes ent = 1;
  EntProof piEnt = 2;
  MasterTrace mtr = 3;
}

message PreTrace {
  bytes id = 1;
  bytes pskidl = 2;
  bytes ctxtha = 3;
}

message TraceProof {
    bytes mpk = 1;
    bytes nonce1 = 2;
    bytes nonce2 = 3;
}

message PreTraceWithProof {
  PreTrace pretrace = 1;
  TraceProof proof = 2;
  bytes info = 3;
}

message Trace {
  bytes id = 1;
  bytes skid = 2;
}

message IBEIdInternal1 {
  bytes info = 1;
  bytes nonce = 2;
}

message IBEIdInternal2 {
  bytes hash = 1;
  uint32 cnt = 2;
  bytes nonce = 3;
}

message IBEEncInternal {
  bytes x = 1;
  bytes m = 2;
  bytes id = 3;
}
